--- a/package.json
+++ b/package.json
@@ -6,30 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/node": "20.11.24",
+    "@types/react": "18.2.61",
+    "@types/react-dom": "18.2.19",
+    "autoprefixer": "10.4.18",
     "clsx": "^2.1.0",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.294.0",
-    "next": "14.0.3",
-    "react": "^18.2.0",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.344.0",
+    "next": "14.1.1",
+    "postcss": "8.4.35",
+    "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.2.0",
-    "recharts": "^2.9.3",
-    "tailwind-merge": "^2.0.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.12.2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5"
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.1"
   }
 }
