--- a/package.json
+++ b/package.json
@@ -27,9 +27,16 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@types/d3-color": "^3.1.3",
+    "@types/d3-path": "^3.1.1",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-shape": "^3.1.7",
+    "@types/d3-time": "^3.0.4",
+    "@types/prop-types": "^15.7.15",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@types/scheduler": "^0.26.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.1"
   }
