--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@types/node": "20.11.24",
     "@types/react": "18.2.61",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.18",
     "clsx": "^2.1.0",
@@ -21,6 +22,7 @@
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "18.2.0",
     "recharts": "^2.12.2",
     "tailwind-merge": "^2.2.1",
