--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
       "varsIgnorePattern": "^_"
     }],
     "@typescript-eslint/no-explicit-any": "warn",
-    "react/no-unescaped-entities": "off"
+    "react/no-unescaped-entities": "off",
+    "@typescript-eslint/ban-ts-comment": "off"
   }
 } 
