--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "recharts": "^2.12.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
+    "tailwind-scrollbar": "^3.0.5",
     "typescript": "5.3.3"
   },
   "devDependencies": {
