--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.61",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "18.2.19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "10.4.18",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
@@ -28,7 +29,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/d3-color": "^3.1.3",
