--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.11.1",
     "@radix-ui/react-select": "^2.0.0",
     "@types/node": "20.11.24",
     "@types/react": "18.2.61",
@@ -19,13 +27,18 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "mongodb": "^6.17.0",
     "next": "14.1.1",
+    "next-auth": "^4.24.11",
     "postcss": "8.4.35",
+    "prisma": "^6.11.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "3.4.1",
@@ -44,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.1"
+    "eslint-config-next": "14.1.1",
+    "ts-node": "^10.9.2"
   }
 }
