--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^6.17.0",
     "next": "14.1.1",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.3.4",
     "postcss": "8.4.35",
     "prisma": "^6.11.1",
     "react": "18.2.0",
