--- a/.dockerignore
+++ b/.dockerignore
@@ -1,39 +1,6 @@
-Dockerfile*
-docker-compose*
-.dockerignore
-.git
-.gitignore
-README.md
-.env
-.env.*
-!.env.example
-.next
-.vscode
 node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# testing
-/coverage
-
-# misc
+.next
+.git
 .DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+npm-debug.log
+yarn-error.log
